    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. The regression test "pseudo-server" does not appear to run properly under JDK 1.4

Limitations:
    1. HttpUnit does not support JavaScript
    2. JDK 1.2 or higher is required


Revision History:
24-Jul-2002
Additions:
    1. PseudoServer and associated classes are now publically available and in their own package, pseudoserver.
    2. Experimental JavaScript is starting to be added: support is present for the following DOM objects:
         Window  properties: self, window, document   methods: alert,  events: onLoad
         Document properties: title, forms, <form name>

15-Jul-2002
Problems fixed:
    1. The "_parent" frame target should now be handled correctly.

10-Jul-2002
Additions:
    1. WebResponse and WebCell now support a new method, getImages, which returns an array of objects representing the
       image tags found.

25-Jun-2002
Additions:
    1. The HttpUnitOption property 'acceptCookies' now controls whether cookies received from the server will be saved
       in a web client and sent on subsequent requests. The default is true.

23-Jun-2002
Acknowledgements:
    Thanks to Steve Heath for an example on how to make JSPs work with ServletUnit.

Additions:
    1. ServletUnit now supports ServletContext.getRealPath
    2. ServletUnit now supports JSPs using Jasper. By default, JSPs are expected to be in the current working directory.
       If an external web.xml file is specified, JSPs will be searched for in the application context directory.

20-Jun-2002 1.4.1
Acknowledgements:
    Thanks to Stefan Renz for finding the file control value bug and providing a fix.
    Thanks to Frank Carver for extending base 64 encoding to handle character values > 127.
    Thanks to Yassen Damyanov for fixing a bug in the handling response headers