@@ -12,6 +12,13 @@ Limitations:
 
 
 Revision History:
+Acknowledgements:
+    Thanks to Rajan Narasimhan for fixing the relative URL computation problem.
+
+25-Jul-2002
+Problems fixed:
+    1. Relative URLs were not being computed properly when the base URL had a query string containing a slash.
+
 24-Jul-2002
 Additions:
     1. PseudoServer and associated classes are now publically available and in their own package, pseudoserver.
